  file it downloads is actually an index before trying to save and use
  it.  (https://github.com/samtools/samtools/issues/1045)

* New API functions bam_set_mempolicy() and bam_get_mempolicy() have
  been added.  These allow more control over the ownership of bam1_t
  alignment record data; see documentation in htslib/sam.h for more
  information.

* Changes to hfile_s3, which provides support for the AWS S3 API.

  - hfile_s3 now uses version 4 signatures by default.  Attempting to write to
    an S3 bucket will also now work correctly.  It is possible to force
    version 2 signatures by creating environment variable HTS_S3_V2 (the exact
    value does not matter, it just has to exist).  Note that writing depends
    on features that need version 4 signatures, so forcing version 2 will
    disable writes.

  - hfile_s3 will automatically retry requests where the region endpoint
    was not specified correctly, either by following the 301 redirect (when
    using path-style requests) or reading the 400 response (when using
    virtual-hosted style requests and version 4 signatures).  The first
    region to try can be set by using the AWS_DEFAULT_REGION environment
    variable, by setting "region" in ".aws/credentials" or by setting
    "bucket_location" in ".s3cfg".

  - hfile_s3 now percent-escapes the path component of s3:// URLs.  For
    backwards-compatibility it will ignore any paths that have already
    been escaped (detected by looking for '%' followed by two hexadecimal
    digits.)

* The htsfile utility can now copy files (including to/from URLs using
  HTSlib's remote access facilities), in addition to its existing uses
  of identifying file formats and displaying sequence or variant data.

* The bgzip utility can now decompress files with non-.gz extensions;
  for example, bgzip -d gnomad.sites.vcf.bgz  (#129)

* Fixed bug where some 8 or 16-bit negative integers were stored using values